cloudrun/ai-notebook-mgmt/canary/ai-notebook-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-notebooks-deployment-v1
  namespace: ns1
  labels:
    app: ai-notebooks
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-notebooks
      version: v1
  template:
    metadata:
      labels:
        app: ai-notebooks
        version: v1
    spec:
      containers:
      - name: ai-notebooks-v1
        image: gcr.io/prdt-nv-cordv-us-iaas-svc99/ai-notebook-mgmt
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
