cloudrun/ai-notebook-mgmt/canary/ai-notebook-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-notebooks-deployment-v2
  namespace: ns1
  labels:
    app: ai-notebooks
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-notebooks
      version: v2
  template:
    metadata:
      labels:
        app: ai-notebooks
        version: v2
    spec:
      containers:
      - name: ai-notebooks-v2
        image: gcr.io/project_id/ai-notebook-mgmt
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
