cloudrun/ai-notebook-mgmt/canary/ai-notebook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-notebooks-svc
  namespace: ns1
spec:
  selector:
    app: ai-notebooks
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
