cloudrun/ai-notebook-mgmt/canary/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ai-notebook-destination
  namespace: ns1
spec:
  host: ai-notebooks-svc.ns1.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
